# valid_grasp_generator

./: .gitignore  CMakeLists.txt  README.md  Rotation.py  package.xml  parameter.yaml
essential_files/essential_transform/: Original_robot_transform.csv  camera_transform.csv  obj15_robot_transform.csv  obj17_robot_transform.csv  obj2_robot_transform.csv  obj4_robot_transform.csv  obj5_robot_transform.csv
launch/: generate_valid_grasp.launch  grasp_cluster_image_saver.launch  similar_grasp_image_generator.launch  visualize_grasp_and_save.launch
models/robots/: barrettwam.robot.xml
models/stl_files/: Ball.STL  Chunk_of_foam.STL  PitcherAssm.STL  PringlesCan.STL  Remote.STL  SnowMan.STL  SprayBottle.STL  TapeRoll.STL  ThunderStick.STL  part_list.csv
msg/: GraspSnapshot.msg
src/: adept_barrett.py  adjust_finger_position.py  angle_format_changer.py  copy_generate_valid_grasp.py  depth_penetration.cpp  extract_grasp_data.py  generate_similar_grasps.py  generate_valid_grasp.py  get_all_contact_values.py  get_intermediate_points.py  get_matrix.py  get_principal_axes.py  get_principal_axis.py  get_similar_contact_score.py  grasp_image_generator.py  grasp_visualizer.py  grasp_visualizer_and_saver.py  manual_extreme_verification.py  nuha_data_sanitizer.py  obj_dict.py  object_visualizer.py  object_visualizer_driver.py  optimize_grasp.cpp  retract_finger.py  shared_global.py  similar_grasp_visualizer.py  symmetricize.py  take_snap_shot.py  test_intermediate_grasps.py  test_on_robot.py  test_original_grasp_on_robot.py  transformations.py
srv/: SnapShot.srv
transformation_matrices/essential_transform/: Table_transform.csv  Wam_transform.csv
transformation_matrices/test_transform/: obj5_sub6_grasp1_optimal0_object_transform.txt
